--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,49 +9,9 @@
     android:gravity="center_horizontal">
 
 
-    <LinearLayout
-        android:orientation="vertical"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Some text to get in the way"
-            android:id="@+id/textView1"
-            android:layout_gravity="center_vertical" />
-
-    </LinearLayout>
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp">
-
-        <dalbers.com.timerpicker.TimerEditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/view2"
-            android:layout_gravity="center_horizontal" />
-
-    </ScrollView>
-
-
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Some more text"
-            android:id="@+id/textView2"
-            android:layout_gravity="center_vertical" />
-
-    </LinearLayout>
-
-
+        android:text="@string/show"
+        android:id="@+id/show_button" />
 </LinearLayout>
