--- a/timerpicker/src/main/res/layout/numerical_dialog_layout.xml
+++ b/timerpicker/src/main/res/layout/numerical_dialog_layout.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <LinearLayout
         android:orientation="horizontal"
@@ -10,11 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp">
-        <dalbers.com.timerpicker.TimerEditText
+        <dalbers.com.timerpicker.TimerTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/view"
+            android:id="@+id/timerTextView"
             android:layout_gravity="center_horizontal"
+            custom:time="0"
             android:textSize="36sp"/>
 
         <ImageButton
