--- a/timerpicker/src/main/res/layout/numerical_dialog_layout.xml
+++ b/timerpicker/src/main/res/layout/numerical_dialog_layout.xml
@@ -78,7 +78,8 @@
             android:text="@string/five_button_text"
             android:id="@+id/five_button"
             android:background="?android:attr/selectableItemBackground"
-            android:textSize="24sp"/>
+            android:textSize="24sp"
+            />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
