--- a/timerpicker/src/main/res/layout-land/numerical_dialog_layout.xml
+++ b/timerpicker/src/main/res/layout-land/numerical_dialog_layout.xml
@@ -8,7 +8,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:minWidth="@dimen/total_min_width"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
@@ -21,28 +20,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        >
+        android:gravity="center_horizontal">
         <dalbers.com.timerpicker.TimerTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:id="@+id/timerTextView"
-            android:layout_marginRight="@dimen/divider_size"
             custom:time="0"
-            android:textSize="@dimen/timer_text_size"
-           />
-        <!--Portrait layout uses a back button next to textview,
-            In landscape, I think it looks weir to have it here
-            So I moved it to next to the zero button-->
-        <!--<ImageButton-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/delete_button"-->
-        <!--android:src="@drawable/ic_backspace"-->
-        <!--android:background="?android:attr/selectableItemBackground"-->
-        <!--android:layout_gravity="center"/>-->
+            android:textAppearance="@android:style/TextAppearance.Large"/>
+
+        <ImageButton
+            android:layout_width="@dimen/number_button_width"
+            android:layout_height="wrap_content"
+            android:id="@+id/delete_button"
+            android:src="@drawable/ic_backspace"
+            android:background="?android:attr/selectableItemBackground"
+            android:layout_gravity="center"/>
     </LinearLayout>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray"/>
 
     <!-- Numbers -->
     <LinearLayout
@@ -62,14 +61,14 @@
                 android:text="@string/one_button_text"
                 android:id="@+id/one_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
             <Button
                 android:layout_width="@dimen/number_button_width"
                 android:layout_height="wrap_content"
                 android:text="@string/two_button_text"
                 android:id="@+id/two_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
             <!--red button, blue button-->
             <Button
                 android:layout_width="@dimen/number_button_width"
@@ -77,7 +76,7 @@
                 android:text="@string/three_button_text"
                 android:id="@+id/three_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
         </LinearLayout>
 
         <LinearLayout
@@ -91,14 +90,14 @@
                 android:text="@string/four_button_text"
                 android:id="@+id/four_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
             <Button
                 android:layout_width="@dimen/number_button_width"
                 android:layout_height="wrap_content"
                 android:text="@string/five_button_text"
                 android:id="@+id/five_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"
+                android:textAppearance="@android:style/TextAppearance.Medium"
                 />
             <Button
                 android:layout_width="@dimen/number_button_width"
@@ -106,7 +105,7 @@
                 android:text="@string/six_button_text"
                 android:id="@+id/six_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
         </LinearLayout>
 
         <LinearLayout
@@ -120,28 +119,28 @@
                 android:text="@string/seven_button_text"
                 android:id="@+id/seven_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
             <Button
                 android:layout_width="@dimen/number_button_width"
                 android:layout_height="wrap_content"
                 android:text="@string/eight_button_text"
                 android:id="@+id/eight_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
             <Button
                 android:layout_width="@dimen/number_button_width"
                 android:layout_height="wrap_content"
                 android:text="@string/nine_button_text"
                 android:id="@+id/nine_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right">
+            android:layout_gravity="center">
 
             <Button
                 android:layout_width="@dimen/number_button_width"
@@ -149,14 +148,9 @@
                 android:text="@string/zero_button_text"
                 android:id="@+id/zero_button"
                 android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
-            <Button
-                android:layout_width="@dimen/number_button_width"
-                android:layout_height="wrap_content"
-                android:text="@string/delete_button_text"
-                android:id="@+id/delete_land_button"
-                android:background="?android:attr/selectableItemBackground"
-                android:textSize="@dimen/number_button_text_size"/>
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
+
         </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
