--- a/timerpicker/src/main/res/values-w960dp-land/dimens.xml
+++ b/timerpicker/src/main/res/values-w960dp-land/dimens.xml
@@ -3,10 +3,11 @@
     Targets modern tablets like Nexus 7 and larger.
 -->
 <resources>
+    <!-- Force buttons to be less wide,
+    since they only contain number, they look awkward so big-->
     <dimen name="number_button_width">84dp</dimen>
-    <dimen name="timer_text_size">36sp</dimen>
+    <!-- For some reason (and only in landscape)
+     you have to force a parent view to a certain width
+     or else the dialog will be cut off -->
     <dimen name="number_button_group_width">252dp</dimen>
-    <dimen name="number_button_text_size">24sp</dimen>
-    <dimen name="divider_size">20dp</dimen>
-    <dimen name="total_min_width">252dp</dimen>
 </resources>
